# KHarness

./: .gitignore  LICENSE  README.md  SOUL.md  pyproject.toml  requirements.txt  test.py
kharness/: agent.py
kharness/config/: config.json  config.py
kharness/memory/: memory.py
kharness/providers/: __init__.py  llamacpp.py  ollama.py  provider.py
kharness/tools/: __init__.py  stocks.py  web.py
