

[project]
name = "kharness"
version = "0.1.0"
description = "Lightweight framework for building LLM agents with tool use, memory, and multi-round research pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["llm", "agent", "ollama", "llamacpp", "langchain", "ai", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.33.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.0",
    "langchain-core>=1.2.23",
    "langchain>=1.2.13",
    "yahoors>=0.1.2",
]

[project.urls]
Repository = "https://github.com/William-Kruta/KHarness"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
